monitoring/prometheus/virtualservice/promnodesvirtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-promnodes
  # namespace: dev-ns
spec:
  gateways:
    - istio-ingressgateway
  hosts:
    - promnodes.zaki14.co.id
  http:
    - corsPolicy:
        allowCredentials: true
        allowHeaders:
          - DNT
          - User-Agent
          - X-Requested-With
          - If-Modified-Since
          - Cache-Control
          - Content-Type
          - Range
          - Authorization
          - authorization
          - Channel-Id
          - X-External-Id
          - X-Partner-Id
          - X-Signature
          - X-Timestamp
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowOrigins:
          - exact: '*'
        maxAge: 24h
      match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: prometheus-kube-state-metrics.monitoring.svc.cluster.local
            port:
              number: 8080
